--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = mongodb+srv://CristianBrz:Tl55PK7s9RlSFNvw@cluster0.ftdd1ks.mongodb.net/
+DATABASE_URL = mongodb+srv://CristianBrz:ugOk5mndYbozauJ4@cluster0.ftdd1ks.mongodb.net/cities
 PORT = 3000
